# geral-ia

./: .gitignore  AGENTS.md  meta-whatsapp-playbook.md  ozonotech_chatbot_abas_separadas.xlsx
teste-whats/: README.md  app.js  docker-compose.yml  index.html  styles.css
teste-whats/api/: .dockerignore  .env.example  README.md  pyproject.toml
teste-whats/api/app/: __init__.py  main.py
teste-whats/api/app/api/: router.py
teste-whats/api/app/api/v1/: router.py
teste-whats/api/app/api/v1/endpoints/: health.py  whatsapp_runtime.py  whatsapp_sessions.py
teste-whats/api/app/clients/: whatsapp_bridge.py
teste-whats/api/app/core/: config.py  database.py
teste-whats/api/app/repositories/: whatsapp_session_repository.py
teste-whats/api/app/schemas/: common.py  whatsapp_session.py
teste-whats/api/app/services/: whatsapp_runtime_service.py
teste-whats/bridge/: .env.example  Dockerfile  README.md  index.js  package.json
